ibangle popup correction

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             color: #22c55e;
         }
 
-        .loader-text{
-            color: #ea4294; 
+        .loader-text {
+            color: #ea4294;
             font-family: 'Lato', sans-serif;
         }
 
@@ -385,8 +385,7 @@
                                 <img src="/MIW_Website_Assets/SD-10.png"
                                     class="title object-contain w-full h-60 sm:h-full" />
                             </div>
-                            <img src="/MIW_Website_Assets/SD-09.png"
-                                class="character character-sm w-full h-72" />
+                            <img src="/MIW_Website_Assets/SD-09.png" class="character character-sm w-full h-72" />
                         </div>
                     </a>
 
@@ -397,8 +396,7 @@
                                 <img src="/MIW_Website_Assets/PS-Nandini-01png.png"
                                     class="title object-cover w-full h-72 sm:h-80" />
                             </div>
-                            <img src="/MIW_Website_Assets/PS-Nandini-02.png"
-                                class="character w-full h-72" />
+                            <img src="/MIW_Website_Assets/PS-Nandini-02.png" class="character w-full h-72" />
                         </div>
                     </a>
 
@@ -409,8 +407,7 @@
                                 <img src="/MIW_Website_Assets/Kaththi-01.png"
                                     class="title object-contain w-full sm:h-72" />
                             </div>
-                            <img src="/MIW_Website_Assets/Kaththi-02.png"
-                                class="character w-full h-72" />
+                            <img src="/MIW_Website_Assets/Kaththi-02.png" class="character w-full h-72" />
 
                         </div>
                     </a>
@@ -846,7 +843,6 @@
     </div>
 
     <!-- ibangle -->
-
 
     <div class="fixed top-10 right-7 flex flex-col place-items-center hidden z-[1000]"
         id="close-popup-button-wrapper-ibangle">
@@ -1543,8 +1539,10 @@
             title: "Dramila: The Kombucha Shop",
             description: "This is a sample paragraph for Dramila's kombucha shop popup. You can update this content as needed.",
             images: [
-                "/MIW_Website_Assets/ibangle-asset.png",
-                "/MIW_Website_Assets/ibangle-asset.png",
+                "/our_works/ibangles/ibangle1.jpg",
+                "/our_works/ibangles/ibangle2.jpg",
+                "/our_works/ibangles/ibangle3.jpg",
+                "/our_works/ibangles/ibangle4.jpg"
             ]
         };
 
