--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
             </div>
             <div class="grid-item col-span-2 sm:col-span-2 sm:row-span-2 sm:col-start-4 bg-yellow-500 cursor-pointer overflow-hidden"
-                onclick="openModal(event, 2)">
+                onclick="openModal(event, 3)">
                 <img src="/MIW_Website_Assets/Ynot_image_work.png"
                     class="w-full h-full object-contain transition-transform transform hover:scale-110 duration-300" />
             </div>
@@ -371,7 +371,7 @@
                     </p>
                     <button
                         class="mt-6 bg-pink-500 px-8 py-3 text-white font-semibold hover:bg-pink-600 transition-all shadow-lg"
-                        onclick="window.location.href='/work.html'">
+                        onclick="window.location.href='/movie-poster.html'">
                         CLICK FOR MORE
                     </button>
                 </div>
