--- a/movie-poster.html
+++ b/movie-poster.html
@@ -169,7 +169,7 @@
         data-scroll-section>
         <!-- Transparent Text Acting as Stencil -->
         <h1 id="animatedText"
-            class="text-[10vw] font-bold text-transparent bg-clip-text bg-fixed bg-center bg-[url('/our_works/poster.jpg')]">
+            class="text-[10vw] font-bold text-transparent bg-clip-text bg-fixed bg-center bg-[url('/services-assets/designing-asset.png')]">
             MOVIE POSTERS
         </h1>
     </section>
