--- a/work.html
+++ b/work.html
@@ -124,7 +124,7 @@
 
     <!--Main Content-->
     <!-- Main Page -->
-    <section class="relative w-full flex items-end justify-end bg-black bg-horse" data-scroll-section>
+    <section class="relative w-full flex items-end justify-end bg-black bg-horse h-screen" data-scroll-section>
         <!-- Overlay with dark blue -->
         <div class="absolute inset-0 bg-blue-950 opacity-50"></div>
 
@@ -139,54 +139,58 @@
         </div>
     </section>
     <!-- Section work gallery -->
-    <section id="horizontal-scroll" class="scroll-container" data-scroll-section>
-        <div id="scrollable-div" class="overflow-x-scroll whitespace-nowrap flex space-x-4 p-4 no-scrollbar">
-
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/Advertising.webp" class="h-full w-full object-cover" alt="Image">
+    <section class="w-full overflow-x-auto whitespace-nowrap scrollbar-hide no-scrollbar p-4" data-scroll-section>
+        <div class="flex flex-nowrap gap-2">
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+                <img src="/our_works/Advertising.webp" class="w-full h-full object-cover" />
                 <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    Advertising
-                </div>
-            </div>
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/Branding.webp" class="h-full w-full object-cover" alt="Image">
-                <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    Branding
-                </div>
-            </div>
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/Events.webp" class="h-full w-full object-cover" alt="Image">
-                <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    Events
-                </div>
-            </div>
-            <a href="/movie-poster.html"
-                class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/MoviePosters.webp" class="h-full w-full object-cover" alt="Image">
-                <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    Movie Posters
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold lat">Advertising</span>
                 </div>
             </a>
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/Products.webp" class="h-full w-full object-cover" alt="Image">
+
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+                <img src="/our_works/Branding.webp" class="w-full h-full object-cover" />
                 <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    Products
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold">Branding</span>
                 </div>
-            </div>
-            <div class="relative group h-[80vh] w-[3/4] flex-shrink-0 cursor-pointer each-section">
-                <img src="/our_works/TItleAnimations.webp" class="h-full w-full object-cover" alt="Image">
+            </a>
+
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+                <img src="/our_works/Events.webp" class="w-full h-full object-cover" />
                 <div
-                    class="absolute inset-0 bg-green-500 opacity-0 group-hover:opacity-100 flex items-center justify-center text-white text-lg font-thin lato-font">
-                    TItle Animations
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold">Events</span>
                 </div>
-            </div>
+            </a>
+
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group" href="/movie-poster.html">
+                <img src="/our_works/MoviePosters.webp" class="w-full h-full object-cover" />
+                <div
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold">Movie Posters</span>
+                </div>
+            </a>
+
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+                <img src="/our_works/Products.webp" class="w-full h-full object-cover" />
+                <div
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold">Products</span>
+                </div>
+            </a>
+
+            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+                <img src="/our_works/TItleAnimations.webp" class="w-full h-full object-cover" />
+                <div
+                    class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
+                    <span class="text-white text-3xl font-bold">Title Animations</span>
+                </div>
+            </a>
         </div>
     </section>
+ 
     <!--Footer-->
     <section data-scroll-section
         class="min-h-1/2 flex flex-col justify-center items-center bg-[#00001b] text-white text-center p-10">
@@ -281,10 +285,12 @@
         </div>
     </section>
 
+
     <!-- loader -->
     <div id="loader"
-        class="fixed inset-0 bg-white flex items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
+        class="fixed inset-0 bg-white flex flex-col items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
         <img id="logo-img" src="/MIW_Website_Assets/loader_horse.gif" alt="loader" class="w-20 h-20 object-contain">
+        <span id="loading-text" class="loader-text text-sm font-bold mt-4 ml-3">0%</span>
     </div>
     <!--loader end  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -295,9 +301,42 @@
     <script>
         let locoScrollInstance;
 
-        document.addEventListener("readystatechange", () => {
-            if (document.readyState === "complete") {
-                document.getElementById("loader").classList.add("hidden");
+        // Loading
+        document.addEventListener("DOMContentLoaded", () => {
+            const loader = document.getElementById("loader");
+            const loadingText = document.getElementById("loading-text");
+
+            const assets = document.images;
+            const totalAssets = assets.length;
+            let loadedCount = 0;
+
+            if (totalAssets === 0) {
+                finishLoading();
+            }
+            for (let i = 0; i < totalAssets; i++) {
+                const img = assets[i];
+
+                if (img.complete) {
+                    incrementLoaded();
+                } else {
+                    img.addEventListener('load', incrementLoaded);
+                    img.addEventListener('error', incrementLoaded);
+                }
+            }
+
+            function incrementLoaded() {
+                loadedCount++;
+                const percent = Math.round((loadedCount / totalAssets) * 100);
+                loadingText.textContent = `${percent}%`;
+
+                if (loadedCount === totalAssets) {
+                    finishLoading();
+                }
+            }
+
+            function finishLoading() {
+                loader.classList.add("opacity-0");
+                setTimeout(() => loader.classList.add("hidden"), 1000); // matches transition duration
             }
         });
         document.getElementById("shareButton").addEventListener("click", async () => {
@@ -451,51 +490,27 @@
         }
 
         // Desktop: Handle wheel scrolling
-        document.addEventListener("wheel", (e) => {
-            if (!isInView(scrollable)) return;
-
-            const isScrollingDown = e.deltaY > 0;
-            const isScrollingUp = e.deltaY < 0;
-
-            stopLoco(); // always stop loco when in view
-            e.preventDefault();
-
-            // scrollable.scrollBy({ left: e.deltaY, behavior: 'smooth' });
-            gsap.to(scrollable, {
-                scrollLeft: scrollable.scrollLeft + e.deltaY,
-                duration: 0.1,
-                ease: "power2.out"
-            });
-
-            if ((isScrollingDown && isAtEnd(scrollable)) || (isScrollingUp && isAtStart(scrollable))) {
-                startLoco();
-            }
-        }, { passive: false });
-
-
-        // // Mobile: Handle touch horizontal scroll
-        // scrollable.addEventListener("touchstart", (e) => {
-        //     startX = e.touches[0].clientX;
-        // }, { passive: true });
-
-        // scrollable.addEventListener("touchmove", (e) => {
+        // document.addEventListener("wheel", (e) => {
         //     if (!isInView(scrollable)) return;
 
-        //     const currentX = e.touches[0].clientX;
-        //     const deltaX = startX - currentX;
+        //     const isScrollingDown = e.deltaY > 0;
+        //     const isScrollingUp = e.deltaY < 0;
 
-        //     stopLoco();
+        //     stopLoco(); // always stop loco when in view
+        //     e.preventDefault();
 
-        //     // Prevent vertical scroll
-        //     if (e.cancelable) e.preventDefault();
+        //     // scrollable.scrollBy({ left: e.deltaY, behavior: 'smooth' });
+        //     gsap.to(scrollable, {
+        //         scrollLeft: scrollable.scrollLeft + e.deltaY,
+        //         duration: 0.1,
+        //         ease: "power2.out"
+        //     });
 
-        //     scrollable.scrollLeft += deltaX;
-        //     startX = currentX;
-
-        //     if ((deltaX > 0 && isAtEnd(scrollable)) || (deltaX < 0 && isAtStart(scrollable))) {
+        //     if ((isScrollingDown && isAtEnd(scrollable)) || (isScrollingUp && isAtStart(scrollable))) {
         //         startLoco();
         //     }
         // }, { passive: false });
+
 
         window.addEventListener("load", () => {
             imagesLoaded(scrollContainer, { background: true }, () => {
