--- a/work.html
+++ b/work.html
@@ -139,9 +139,9 @@
         </div>
     </section>
     <!-- Section work gallery -->
-    <section class="w-full overflow-x-auto whitespace-nowrap scrollbar-hide no-scrollbar p-4" data-scroll-section>
-        <div class="flex flex-nowrap gap-2">
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+    <section class="w-full overflow-x-auto whitespace-nowrap scrollbar-hide no-scrollbar pb-4 pt-4" data-scroll-section>
+        <div class="flex flex-nowrap gap-4">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
                 <img src="/our_works/Advertising.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -149,7 +149,7 @@
                 </div>
             </a>
 
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
                 <img src="/our_works/Branding.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -157,7 +157,7 @@
                 </div>
             </a>
 
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
                 <img src="/our_works/Events.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -165,7 +165,7 @@
                 </div>
             </a>
 
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group" href="/movie-poster.html">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group" href="/movie-poster.html">
                 <img src="/our_works/MoviePosters.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -173,7 +173,7 @@
                 </div>
             </a>
 
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw]  h-screen flex-shrink-0 inline-block group">
                 <img src="/our_works/Products.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -181,7 +181,7 @@
                 </div>
             </a>
 
-            <a class="relative w-[50vw] h-screen flex-shrink-0 inline-block group">
+            <a class="relative w-full sm:w-[50vw] h-screen flex-shrink-0 inline-block group">
                 <img src="/our_works/TItleAnimations.webp" class="w-full h-full object-cover" />
                 <div
                     class="absolute inset-0 bg-green-500 bg-opacity-1 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity">
@@ -190,7 +190,7 @@
             </a>
         </div>
     </section>
- 
+
     <!--Footer-->
     <section data-scroll-section
         class="min-h-1/2 flex flex-col justify-center items-center bg-[#00001b] text-white text-center p-10">
